[FEAT] Gemini connect
