# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\ChatController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -18,5 +19,10 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::controller(AuthController::class)->group(function () {
         Route::get('profile', 'profile');
         Route::put('profile', 'profileUpdate');
+    });
+    Route::controller(ChatController::class)->group(function () {
+        Route::post('chat', 'chatRequest');
+        Route::get('chat', 'chatHistory');
+        Route::delete('chat', 'chatClear');
     });
 });
